Massive updates and refinements to algorithm, and adding better GUI.